syntax = "proto3";

package quotes;

option go_package = "github.com/apfelkraepfla/quotes-service/protos/quotespb";

message QuoteRequest {}

message QuoteResponse {
  string quote = 1;
}

service QuoteService {
  rpc GetQuote (QuoteRequest) returns (QuoteResponse);
}
